chore: remove teamberatung feature
Refs: CARITAS-243